@@ -2,6 +2,7 @@ Not released yet
 ----
 
 - #474: Start using setuptools_scm for tag based versioning.
+- #506: With `-a`: do not show additional environments header if there are none
 
 2.7.0
 -----
